# fnv-reshade-helper

./: .gitmodules  Build Release.bat  CMakeLists.txt  CMakePresets.json  GitGen.bat  vcpkg.json
cmake/: AddCXXFiles.cmake  NVSEPlugin.cmake  Plugin.h.in
include/: PCH.h
src/: NVSEPlugin.cpp  XSEPlugin.cpp
